--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "start": "grapesjs-cli serve",
+    "dev": "grapesjs-cli serve",
     "build": "grapesjs-cli build",
     "bump": "npm version patch -m 'Bump v%s'"
   },
